<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textview_appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/heading_text_color"
            android:typeface="sans" />

        <ImageView
            android:id="@+id/imageview_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/cd_img"
            android:src="@drawable/ic_launcher" />       

        <TextView
            android:id="@+id/textview_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_splash_version"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/heading_text_color"
            android:typeface="sans" />

    </LinearLayout>

</LinearLayout>
